--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "smartxray",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://YashShah811.github.io/smart-xray-react",
+  "homepage": "https://xray.deepnets.in/",
   "dependencies": {
     "@material-ui/core": "^4.9.11",
     "@material-ui/icons": "^4.9.1",
@@ -10,9 +10,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "gh-pages": "^3.2.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-pdf": "^5.7.2",
     "react-redux": "^7.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "3.4.0",
     "recharts": "^1.8.5",
     "redux": "^4.0.5",
@@ -21,7 +24,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -41,8 +44,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^3.2.3"
   }
 }
