--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "predeploy": "npm install && npm run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
